# Blocksmith-BR

./: .gitignore  AGENTS.md  README.md  RELEASE.md  generate-ico.js  generate-icons.js  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: file_mover.rs  mod.rs  pack_detector.rs  pack_type.rs
src/components/: AnimatedBackground.tsx  AnimatedLogViewer.tsx  ConfirmDialog.tsx  HamburgerMenu.tsx  HelpPage.tsx  InstalledPacksPage.tsx  Notifications.tsx  PackList.tsx  ScanControls.tsx  Settings.tsx  StatisticsPage.tsx
src/styles/: AnimatedLogViewer.css  HamburgerMenu.css  HelpPage.css  InstalledPacksPage.css  StatisticsPage.css
src/utils/: packUtils.ts
