[package]
name = "blocksmith"
version = "0.1.0"
description = "Blocksmith - Minecraft Bedrock Pack Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "blocksmith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dirs = "5"
fs_extra = "1"
zip = "2"
base64 = "0.22"
notify = "6"
regex = "1"
once_cell = "1"
image = "0.25"
rayon = "1.10"
crossbeam = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
